# ScopedMemoryAllocations

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: ci.yml
Examples/: CMakeLists.txt  Main.cpp
Source/: CMakeLists.txt
Source/ScopedMemoryAllocations/: Allocations.cpp  Allocations.h  Malloc.cpp  Operators.cpp
Tests/: CMakeLists.txt  Tests.cpp
